Fix position of buttons + image overflow

--- a/src/styles/components/_apartmentCards.scss
+++ b/src/styles/components/_apartmentCards.scss
@@ -2,22 +2,28 @@
 
 .apartement-cards-container {
   width: 90%;
+  margin: 2rem;
 	padding-top: 1rem;
+  padding-bottom: 1rem;
   & div {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(auto, 1fr));
-    grid-gap: 1rem;
+    grid-gap: 2rem;
   }
 }
 
+.apartement_title{
+  padding-bottom: 2rem;
+}
+
 .apartmentCard{
-  box-shadow: 0 15px 30px 1px grey;
+  box-shadow: 0 10px 20px 1px grey;
 	background: rgba(255, 255, 255, 0.90);
 	text-align: center;
 	border-radius: 10px;
 	overflow: hidden;
-	margin: 1em auto;
   display: flex; 
+  flex-direction: column;
   & div {
     display: flex;
     justify-content: center;
@@ -45,7 +51,7 @@
 	padding: 30px;
 	height: 100%;
 	float: left;
-	width: 40%;
+	width: 50%;
 }
 
 .apartmentCard .product-details h3{
@@ -65,8 +71,7 @@
 
 .control{
 	position: absolute;
-	bottom: 20%;
-	left: 22.8%;	
+	bottom: 0%;
 }
 
 .btn {
@@ -103,7 +108,7 @@
 	margin: 0;
 }
 
-.btn .buy {z-index: 3; font-weight: bolder;}
+.btn .look {z-index: 3; font-weight: bolder;}
 
 .product-image {
 	transition: all 0.3s ease-out;
@@ -118,7 +123,7 @@
 .apartmentCard img {width: 100%;height: 100%;}
 
 .info {
-    background: rgba(27, 26, 26, 0.9);
+    background: rgba(95, 168, 211, 0.75);
     transition: all 0.3s ease-out;
     transform: translateX(-100%);
     position: absolute;
@@ -134,14 +139,13 @@
     top: 0;
 }
 
-.info h2 {text-align: center}
-.product-details:hover .info{transform: translateX(0);}
+.product-image:hover .info{transform: translateX(0);}
 
 .info ul li{transition: 0.3s ease;}
 .info ul li:hover{transform: translateX(50px) scale(1.3);}
 
-.product-details:hover img {transition: all 0.3s ease-out;}
-.product-details:hover img {transform: scale(1.2, 1.2);}
+.product-image:hover img {transition: all 0.3s ease-out;}
+.product-image:hover img {transform: scale(1.2, 1.2);}
 
 @media (min-width: $breakpoint-medium-devices) {
   .apartement-cards-container {
